--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
 # Hi, I'm Jitendra
 
-This is an desperate attempt to build a portfolio/personal website. pls cringe
+This is an desperate attempt to build a <b>P</b>ersonal <b>P</b>ortfolio website. Kindly adjust
