--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -5,5 +5,12 @@
   link="https://vaasi.paatallokvasi.com/"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  This is here only. More Projects incoming...
+</ProjectCard>
+
+<ProjectCard
+  title="PP ke baad PooPoo"
+  link="/aagesadakkharabh.png"
+  bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
+>
+  More Projects incoming...
 </ProjectCard>
