--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,5 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> Are aisi angrezi ave hain ke I can leave angrez behind (I know such English that I will leave the British behind). You see sir, I can talk English, I can walk English, I can laugh English, I can run English, because English is such a funny language. Bhairo becomes Byron because their minds are very narrow.
+ - (Amitabh Bachchan in Namak Halal)
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
