--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,4 @@
-## About
+## About me
 
 > Are aisi angrezi ave hain ke I can leave angrez behind (I know such English that I will leave the British behind). You see sir, I can talk English, I can walk English, I can laugh English, I can run English, because English is such a funny language. Bhairo becomes Byron because their minds are very narrow.
- - (Amitabh Bachchan in Namak Halal)
 
