--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,9 +2,10 @@
 
 <ProjectCard
   title="My PP Website"
-  link="https://vaasi.paatallokvasi.com/"
+  link="#"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
+ It is nice here.
 </ProjectCard>
 
 <ProjectCard
